Decorator fix
