# src/app.controller.ts
@@ -4,10 +4,4 @@ import { AppService } from './app.service';
 @Controller({ version: '1' })
 export class AppController {
   constructor(private readonly appService: AppService) {}
-
-  @Get('signature/get')
-  sigVerify() {}
-
-  @Get('/cache/index')
-  cacheStats() {}
 }
